[gd_scene load_steps=2 format=3 uid="uid://dofegotxf1ga8"]

[ext_resource type="Script" path="res://TitleScreen.gd" id="1_5y7l3"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y7l3")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 56.0
offset_right = 310.0
offset_bottom = 106.0
text = "Start"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 162.0
offset_right = 310.0
offset_bottom = 212.0
text = "Quit"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
